@@ -1,3 +1,9 @@
+2004-09-09 Chris Wiebe
+
+	limit base class selection to referenced projects
+	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java
+	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassWizardMessages.properties
+
 2004-09-08 Alain Magloire
 
 	Fix For PR 73459
